Archive/cb632529574d072d35ea4029ae8b4670-566ba27bdbe9ec997145a2702f4e303b/output
+ g++ -std=c++11 -O3 -Wall -fstrict-aliasing -pedantic -pthread main.cpp
main.cpp:7:37: error: redeclared with 2 template parameters
 template<int... l, int... r> struct concatenate{
                                     ^
main.cpp:5:25: note: previous declaration ‘template<int ...<anonymous> > struct concatenate’ used 1 template parameter
 template<int...> struct concatenate{};
                         ^
main.cpp: In function ‘int main()’:
main.cpp:15:38: error: type/value mismatch at argument 1 in template parameter list for ‘template<int ...<anonymous> > struct concatenate’
  typedef concatenate<X<1,2,3>,X<4,5,6>>::concatenated Z;
                                      ^
main.cpp:15:38: error:   expected a constant of type ‘int’, got ‘X<1, 2, 3>’
main.cpp:15:38: error: type/value mismatch at argument 1 in template parameter list for ‘template<int ...<anonymous> > struct concatenate’
main.cpp:15:38: error:   expected a constant of type ‘int’, got ‘X<4, 5, 6>’
main.cpp:15:55: error: expected initializer before ‘Z’
  typedef concatenate<X<1,2,3>,X<4,5,6>>::concatenated Z;
                                                       ^
